syntax = "proto3"; 
package user; 
option go_package = "github.com/child6yo/rago/proto/user";

import "google/protobuf/empty.proto"; 

message User {
    string login = 1;
    string password = 2;
}

message UserID {
    int32 id = 1;
}

message Token {
    string token = 1;
}

message Collection {
    string collection = 1;
}

message Empty {}

service AuthService {
    rpc Register (User) returns (Collection);
    rpc Login (User) returns (Token);
    rpc Auth (Token) returns (UserID);
}

message APIKey {
    string key = 1;
}

message DeleteAPIKeyRequest {
    int32 api_key_id = 1;
    UserID user_id = 2;
}

message APIKeyArray {
    repeated APIKey keys = 1;
}

service APIKeyService {
    rpc CreateAPIKey (UserID) returns (APIKey);
    rpc DeleteAPIKey (DeleteAPIKeyRequest) returns (google.protobuf.Empty);
    rpc GetAPIKeys (UserID) returns (APIKeyArray);
    rpc CheckAPIKey (APIKey) returns (google.protobuf.Empty);
}

service CollectionService {
    rpc GetCollection (UserID) returns (Collection);
}